# bookmark

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  rust-build.yaml
docs/: import-from-previous-version.md  usage.md
src/lib/: filters.rs  lib.rs  record_filter.rs  registry.rs  sort.rs  storage.rs  types.rs  util.rs
src/lib/import/: mod.rs  v0_0_x.rs
src/lib/import/brave/: bookmarks.rs  import.rs  mod.rs
