[package]
name = "bookmark-cli"
version = "0.1.0"
authors = ["Szymongib <szymongib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bookmark_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "bookmark"
path = "src/bin/main.rs"

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0.0"
tui = "0.10"
rand = "0.7.3"
termion = "1.5.5"
open = "1"
uuid = { version = "0.8", features = ["v4"] }