[package]
name = "bookmark"
version = "0.2.2"
authors = ["Szymongib <szymongib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bookmark_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "bookmark"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5", features = ["string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0.0"
ratatui = { version = "0.27", features = ["termion"] }
termion = "1.5.5"
open = "1"
hex = "0.4"
rand = "0.7.3"
regex = "1"

